K8sFiles/analytics-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-worker
  namespace: apps
  labels:
    app: analytics-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-worker
  template:
    metadata:
      labels:
        app: analytics-worker
    spec:
      containers:
        - name: analytics-worker
          image: techcoremicroservices-book-service-books
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
