K8sFiles/analytics-worker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-worker
  namespace: apps
  labels:
    app: analytics-worker
spec:
  clusterIP: None
  selector:
    app: analytics-worker
