K8sFiles/api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: apps
  labels:
    app: api-gateway
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - port: 5000        # логический порт сервиса
      targetPort: 8081  # порт контейнера
      protocol: TCP
      nodePort: 30000   # внешний порт узла
