K8sFiles/book-review-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-review-service-deployment
  labels:
    app: book-review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-review-service
  template:
    metadata:
      labels:
        app: book-review-service
    spec:
      containers:
        - name: book-review-service
          image: techcoremicroservicesbookreviewserviceapi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: book-review-service
spec:
  type: NodePort
  selector:
    app: book-review-service
  ports:
    - port: 8082
      targetPort: 8080
      nodePort: 30082
