K8sFiles/book-service-authors-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: author-service-deployment
  labels:
    app: author-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: author-service
  template:
    metadata:
      labels:
        app: author-service
    spec:
      containers:
        - name: author-service
          image: techcoremicroservicesbookserviceauthorsapi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
            - name: config-volume
              mountPath: /app/config   
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: author-service-config
            items:
              - key: appsettings.json
                path: appsettings.json 
---
apiVersion: v1
kind: Service
metadata:
  name: author-service
spec:
  type: NodePort
  selector:
    app: author-service
  ports:
    - port: 8081
      targetPort: 8080
      nodePort: 30081
