K8sFiles/book-service-books-service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  type: NodePort
  selector:
    app: book-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
